# kosta-aetherville

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DECISIONS.md  MACBOOK_AGENT_SETUP.md  MACBOOK_DEMO_QUICKSTART.md  PROGRESS.md  README.md  SESSION_HANDOFF.md  TASKS.json  TEST_PLAN.md  docker-compose.cloud.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.codex/: config.example.toml
server/: AGENTS.md  pyproject.toml
server/agents/: test_citizen_agents.py
server/city_ai/: test_planner.py
server/llm/: test_llm_cache.py
server/orchestrator/: test_command_handler.py
server/sim/: test_god_mode.py  test_taskgraph_planner.py  test_traffic_integration.py
server/src/aetherville_server/: __init__.py  learning.py  main.py  scenario.py  vision.py  vllm_fallback.py
server/src/aetherville_server/agents/: __init__.py  citizens.py
server/src/aetherville_server/city_ai/: __init__.py  planner.py
server/src/aetherville_server/llm/: __init__.py  cache.py  openai.py
server/src/aetherville_server/orchestrator/: __init__.py  command_handler.py  vllm_command.py
server/src/aetherville_server/sim/: __init__.py  engine.py
server/src/aetherville_server/traffic_ai/: __init__.py  baseline.py  env.py  forecast.py  metrics.py  policy.py  train_gpu_policy.py  train_lstm_forecast.py
server/tests/: test_api_contracts.py  test_health.py  test_learning_loop.py  test_model_training_pipeline.py  test_services.py  test_sim_engine.py  test_traffic_ai_runtime.py  test_ws_contract.py
server/traffic_ai/: test_traffic_ai.py
server/vehicles/: test_pathfinding.py  test_vehicle_controller.py
server/vision/: test_detect_contract.py
server/voice/: test_voice_stub.py
(+137 files in other folders)
