[project]
name = "aetherville-server"
version = "0.1.0"
description = "FastAPI and Socket.IO orchestrator skeleton for Project Aetherville"
requires-python = ">=3.11"
dependencies = [
  "aetherville-schemas",
  "fastapi>=0.115.0",
  "python-socketio>=5.11.0",
  "uvicorn[standard]>=0.30.0",
]

[tool.uv.sources]
aetherville-schemas = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aetherville_server"]
